npm updates // Fix scrollbar on TopicsBar

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,9 +1,5 @@
 @import "src/index.scss";
 
-.nav-wrapper {
-    
-}
-
 nav.navbar {
     position: relative;
     display: flex;
@@ -91,10 +87,6 @@ nav.navbar {
     &:last-child {
         margin-right: 20px;
     }
-
-    &:hover {
-
-    }
 }
 
 a {
@@ -110,32 +102,6 @@ a.primary {
         background-color: #19444e;
     }
 }
-
-// .row-topics {
-//     display: flex;
-//     background-color: white;
-//     color: $font-color-dark;
-//     width: 100vw;
-//     padding: 10px;
-//     overflow: auto;
-//     font-size: 16px;
-//     font-weight: bold;
-// }
-
-// .row-topic {
-//     display: flex;
-//     flex-direction: row;
-//     background-color: white;
-//     border-radius: 5px;
-//     margin: auto 10px;
-//     font-size: 14px;
-//     white-space: nowrap;
-//     font-weight: bold;
-
-//     &:hover {
-//         text-decoration: underline;
-//     }
-// }
 
 @media all and (max-width: 600px) and (min-width: 300px) {
     nav.navbar {
