--- a/src/components/TopicsBar.scss
+++ b/src/components/TopicsBar.scss
@@ -4,8 +4,8 @@
     display: flex;
     background-color: white;
     color: $font-color-dark;
-    width: 100vw;
-    padding: 16px 12px 16px 12px;
+    padding: 10px 12px 10px 12px;
+    overflow-y: hidden;
     overflow-x: auto;
     font-size: 16px;
     font-weight: bold;
